# gamedev_template_project

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/Lib/: Color.cpp  Color.hpp  Game.cpp  Game.hpp  Point.cpp  Point.hpp  PointF.cpp  PointF.hpp  Rect.cpp  Rect.hpp  RectF.cpp  RectF.hpp  Renderer.cpp  Renderer.hpp  Size.cpp  Size.hpp  Window.cpp  Window.hpp
